--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,6 @@ insert_final_newline = true
 [Makefile]
 indent_style = tab
 
-[*.{html,md,yaml}]
+[*.{html,md,sass,yaml}]
 indent_style = space
 indent_size = 2
