--- a/config.yaml
+++ b/config.yaml
@@ -8,3 +8,32 @@ params:
     subtitle: Power your metrics and alerting with a leading open source monitoring solution
   logos:
     navbar: prometheus-logo-grey.svg
+  features:
+  - title: Dimensional data
+    icon: flask
+    text: Prometheus implements a highly dimensional data model. Time series are identified by a metric name and a set of key-value pairs.
+  - title: Powerful queries
+    icon: search
+    text: A flexible query language allows slicing and dicing of collected time series data in order to generate ad-hoc graphs, tables, and alerts.
+  - title: Great visualization
+    icon: chart-line
+    fa: true
+    text: |
+      Prometheus has multiple modes for visualizing data: a built-in expression browser, [Grafana](https://grafana.com/) integration, and a console template language.
+  - title: Efficient storage
+    icon: database
+    text: Prometheus stores time series in memory and on local disk in an efficient custom format. Scaling is achieved by functional sharding and federation.
+  - title: Simple operation
+    icon: cogs
+    text: Each server is independent for reliability, relying only on local storage. Written in Go, all binaries are statically linked and easy to deploy.
+  - title: Precise alerting
+    icon: exclamation-triangle
+    text: Alerts are defined based on Prometheus's flexible query language and maintain dimenstional information. An Alertmanager handles notifications and silencing.
+  - title: Many client libraries
+    icon: code
+    fa: true
+    text: Client libraries allow for easy instrumentation of services. Over ten languages are supported already and custom libraries are easy to implement.
+  - title: Many integrations
+    icon: cloud-upload-alt
+    text: |
+      Existing exporters allow for bridging of third-party data into Prometheus. Examples: system statistics, as well as Docker, HAProxy, StatsD, and JMX metrics.
