--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,8 @@
-[build]
-publish = "public"
-command = "make netlify-build"
-
 [context.production.environment]
 HUGO_VERSION = "0.42.1"
+
+[context.production]
+command = "make netlify-build"
 
 [context.deploy-preview.environment]
 HUGO_VERSION = "0.42.1"
