change main page color pattern

--- a/config.yaml
+++ b/config.yaml
@@ -20,8 +20,7 @@ params:
     title: From metrics to insight
     subtitle: Power your metrics and alerting with the leading open source monitoring solution
   quote:
-    text: |
-      Even though Borgmon remains internal to Google, the idea of treating time-series data as a data source for generating alerts is now accessible to everyone through those open source tools like Prometheus [...]
+    text: Even though Borgmon remains internal to Google, the idea of treating time-series data as a data source for generating alerts is now accessible to everyone through those open source tools like Prometheus [...]
     source: |
       [**Site Reliability Engineering**: How Google Runs Production Systems](http://shop.oreilly.com/product/0636920041528.do) — (O'Reilly Media)
   logos:
